[gd_scene load_steps=15 format=3 uid="uid://y42ho5uudpws"]

[ext_resource type="Script" path="res://script/HeadUpDisplay.gd" id="1_446rp"]
[ext_resource type="Script" path="res://script/DeepSpaceImmersion.gd" id="1_fp0y2"]
[ext_resource type="Script" path="res://script/Tracker.gd" id="2_02a8b"]
[ext_resource type="Script" path="res://script/Settings.gd" id="3_8u80f"]
[ext_resource type="Script" path="res://script/Help.gd" id="3_obwnf"]
[ext_resource type="Script" path="res://script/CameraRectangle.gd" id="4_6xbjc"]
[ext_resource type="Script" path="res://script/ShowSettings.gd" id="5_3c45w"]
[ext_resource type="Texture2D" uid="uid://coyah44acds44" path="res://image/Restart.png" id="5_w0gib"]
[ext_resource type="Script" path="res://script/ShowHelp.gd" id="7_wnklu"]
[ext_resource type="Texture2D" uid="uid://dhrt05cuctqke" path="res://image/Cross.png" id="10_b70x3"]
[ext_resource type="Script" path="res://script/Restart.gd" id="10_jiatf"]
[ext_resource type="Texture2D" uid="uid://clf0143icg626" path="res://image/Frame.png" id="11_fbk0g"]
[ext_resource type="PackedScene" uid="uid://rq1h0g5qbr6l" path="res://scene/DeepSpace.tscn" id="14_fx6kr"]

[sub_resource type="CameraTexture" id="CameraTexture_p1oyg"]

[node name="DeepSpaceImmersion" type="Node3D"]
script = ExtResource( "1_fp0y2" )

[node name="DeepSpace" parent="." instance=ExtResource( "14_fx6kr" )]

[node name="Tracker" type="Node" parent="."]
script = ExtResource( "2_02a8b" )

[node name="HeadUpDisplay" type="CanvasLayer" parent="."]
script = ExtResource( "1_446rp" )

[node name="Restart" type="Button" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 117.0
offset_bottom = 54.0
text = "Restart
"
icon = ExtResource( "5_w0gib" )
script = ExtResource( "10_jiatf" )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Help" type="PanelContainer" parent="CenterContainer"]
visible = false
offset_left = 512.0
offset_top = 300.0
offset_right = 512.0
offset_bottom = 300.0
script = ExtResource( "3_obwnf" )

[node name="HelpText" type="RichTextLabel" parent="CenterContainer/Help"]
offset_left = 7.0
offset_top = 7.0
offset_right = 1273.0
offset_bottom = 687.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Eliminate space junk to make a better universe.

[color=gray]Rockets and satellites are force shield protected.
Take their defences down and thrash them.
After disassembling take care of loose parts.
Hold down [color=white]T key[/color] to do the cleaning in slow motion.
You can use [color=white]middle mouse button[/color] to take a look but
using webcam [color=#ffeeaa]Deep Space Immersion™[/color] is much better.[/color]

Using webcam for [color=#ffeeaa]Deep Space Immersion™[/color]:
1. Attach webcam in the middle of monitor's top edge[color=gray]*[/color].
2. Attach sticky note[color=gray]**[/color] to your forhead as a marker. Use contrasting one.
3. Using settings section click the note on camera feed. Processed image is shown below the feed.
4. Adjust HSV threshold if necessary. It should filter out your marker.
Be sure marker is visible in all head positions and is only thing visible.

[color=gray]* Be sure room is well uniformely lit, avoid backlight.

** Sticky notes tend to change hue when tilted, especially in bad lighting conditions.
You can use color ping pong ball as marker, as it's rotation resistant.[/color][/center]
"
fit_content_height = true

[node name="Settings" type="PanelContainer" parent="."]
offset_right = 351.0
offset_bottom = 649.0
script = ExtResource( "3_8u80f" )

[node name="Columns" type="HBoxContainer" parent="Settings"]
offset_right = 351.0
offset_bottom = 649.0

[node name="Column1" type="VBoxContainer" parent="Settings/Columns"]
offset_bottom = 649.0

[node name="CameraRectangle" type="TextureRect" parent="Settings/Columns/Column1"]
texture = SubResource( "CameraTexture_p1oyg" )
script = ExtResource( "4_6xbjc" )

[node name="MaskedRectangle" type="TextureRect" parent="Settings/Columns/Column1"]
offset_top = 4.0
offset_bottom = 4.0

[node name="Cameras" type="ItemList" parent="Settings/Columns/Column1"]
offset_top = 8.0
offset_bottom = 16.0
auto_height = true

[node name="Column2" type="VBoxContainer" parent="Settings/Columns"]
offset_left = 4.0
offset_right = 298.0
offset_bottom = 649.0

[node name="ColorPicker" type="ColorPickerButton" parent="Settings/Columns/Column2"]
minimum_size = Vector2(0, 32)
offset_right = 294.0
offset_bottom = 32.0

[node name="Tracking" type="HBoxContainer" parent="Settings/Columns/Column2"]
offset_top = 36.0
offset_right = 294.0
offset_bottom = 90.0

[node name="Idle" type="CheckBox" parent="Settings/Columns/Column2/Tracking"]
offset_right = 57.0
offset_bottom = 54.0
text = "Idle"

[node name="HsvTrack" type="CheckBox" parent="Settings/Columns/Column2/Tracking"]
offset_left = 61.0
offset_right = 132.0
offset_bottom = 54.0
text = "HSV
Track"

[node name="HsvMask" type="CheckBox" parent="Settings/Columns/Column2/Tracking"]
offset_left = 136.0
offset_right = 205.0
offset_bottom = 54.0
text = "HSV
Mask
"

[node name="MarkerTrack" type="CheckBox" parent="Settings/Columns/Column2/Tracking"]
offset_left = 209.0
offset_right = 294.0
offset_bottom = 54.0
text = "Marker
Track"

[node name="Threshold" type="GridContainer" parent="Settings/Columns/Column2"]
offset_top = 94.0
offset_right = 294.0
offset_bottom = 180.0
columns = 2

[node name="H" type="Label" parent="Settings/Columns/Column2/Threshold"]
offset_right = 17.0
offset_bottom = 26.0
text = "H:"

[node name="Hue" type="HSlider" parent="Settings/Columns/Column2/Threshold"]
offset_left = 21.0
offset_right = 294.0
offset_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.1

[node name="S" type="Label" parent="Settings/Columns/Column2/Threshold"]
offset_top = 30.0
offset_right = 17.0
offset_bottom = 56.0
text = "S:"

[node name="Saturation" type="HSlider" parent="Settings/Columns/Column2/Threshold"]
offset_left = 21.0
offset_top = 30.0
offset_right = 294.0
offset_bottom = 46.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.1

[node name="V" type="Label" parent="Settings/Columns/Column2/Threshold"]
offset_top = 60.0
offset_right = 17.0
offset_bottom = 86.0
text = "V:"

[node name="Value" type="HSlider" parent="Settings/Columns/Column2/Threshold"]
offset_left = 21.0
offset_top = 60.0
offset_right = 294.0
offset_bottom = 76.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 0.1

[node name="Cross" type="Sprite2D" parent="Settings"]
texture = ExtResource( "10_b70x3" )

[node name="Frame" type="Sprite2D" parent="Settings"]
texture = ExtResource( "11_fbk0g" )

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="ShowSettings" type="CheckButton" parent="Buttons"]
offset_right = 110.0
offset_bottom = 40.0
text = "Settings"
script = ExtResource( "5_3c45w" )

[node name="ShowHelp" type="CheckButton" parent="Buttons"]
offset_left = 114.0
offset_right = 198.0
offset_bottom = 40.0
text = "Help"
script = ExtResource( "7_wnklu" )
